--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8"> 
 <link rel="stylesheet" href="css/style.css" />
+</head>
 
-
+<body>
 <h1>Quran App</h1>
 
 <div id="wrapper">
@@ -23,3 +27,5 @@ Loading ...
 
 <script src="js/jquery-1.11.3.min.js"></script>
 <script src="js/quran.js"></script>
+</body>
+</html>
