Suras table formating

--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
 
 <div id="wrapper">
 
+<div id="page_num"></div>
+
 <div id="suras">
-Loading ...
+    <table>
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>اسم</th>
+                <th>صفحة</th>
+                <th>عدد الآيات</th>
+        </thead>
+        <tbody>
+            <tr><td>Loading ...</td></tr>
+        </tbody>
+    </table>
 </div><!-- suras -->
 
 
