Next/Prev page using keyboard (left, right)

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ Loading ...
 
 
 <script src="js/jquery-1.11.3.min.js"></script>
+<script src="js/jquery.hotkey.js"></script>
 <script src="js/quran.js"></script>
 </body>
 </html>
