Add page change controls; improve layout

--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
 </head>
 
 <body>
-<h1>Quran App</h1>
 
 <div id="wrapper">
 
-<div id="page_num"></div>
+<h1>Quran App</h1>
 
+<div id="control">
+<a href="" class="page-change" data-offset="-100"> &lt;&lt;&lt; </a>&nbsp;
+<a href="" class="page-change" data-offset="-10"> &lt;&lt; </a>&nbsp;
+<a href="" class="page-change" data-offset="-1"> &lt; </a>&nbsp;
+<span id="page_num"></span>&nbsp;
+<a href="" class="page-change" data-offset="1"> &gt; </a>&nbsp;
+<a href="" class="page-change" data-offset="10"> &gt;&gt; </a>&nbsp;
+<a href="" class="page-change" data-offset="100"> &gt;&gt;&gt; </a>&nbsp;
+</div>
+
+
+<div id="wrapper2">
 <div id="suras">
     <table>
         <thead>
@@ -34,6 +45,8 @@ Loading ...
 <div id="tafseer">
 Loading ...
 </div><!-- tafseer -->
+</div><!-- wrapper2 -->
+
 
 </div><!-- wrapper -->
 
