--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8"> 
 <link rel="stylesheet" href="css/style.css" />
+<title>القرآن الكريم</title>
 </head>
 
 <body>
 
 <div id="wrapper">
 
-<h1>Quran App</h1>
+<h1>القرآن الكريم</h1>
 
 <div id="control">
 <a href="" class="page-change" data-offset="-100"> &lt;&lt;&lt; </a>&nbsp;
