--- a/index.html
+++ b/index.html
@@ -1,59 +1,64 @@
+<!DOCTYPE html>
 <html>
-<head>
-<meta http-equiv="Content-Type" content="text/html;charset=utf-8"> 
-<link rel="stylesheet" href="css/style.css" />
-<title>القرآن الكريم</title>
-</head>
 
-<body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+        <link rel="stylesheet" href="css/style.css" />
+        <title>القرآن الكريم</title>
+    </head>
 
-<div id="wrapper">
+    <body>
 
-<h1>القرآن الكريم</h1>
+        <div id="wrapper">
 
-<div id="control">
-<a href="" class="page-change" data-offset="-100"> &lt;&lt;&lt; </a>&nbsp;
-<a href="" class="page-change" data-offset="-10"> &lt;&lt; </a>&nbsp;
-<a href="" class="page-change" data-offset="-1"> &lt; </a>&nbsp;
-<span id="page_num"></span>&nbsp;
-<a href="" class="page-change" data-offset="1"> &gt; </a>&nbsp;
-<a href="" class="page-change" data-offset="10"> &gt;&gt; </a>&nbsp;
-<a href="" class="page-change" data-offset="100"> &gt;&gt;&gt; </a>&nbsp;
-</div>
+            <h1>القرآن الكريم</h1>
 
-
-<div id="wrapper2">
-<div id="suras">
-    <table>
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>اسم</th>
-                <th>صفحة</th>
-                <th>عدد الآيات</th>
-        </thead>
-        <tbody>
-            <tr><td>Loading ...</td></tr>
-        </tbody>
-    </table>
-</div><!-- suras -->
+            <div id="control">
+                <a href="" class="page-change" data-offset="-100"> &lt;&lt;&lt; </a>&nbsp;
+                <a href="" class="page-change" data-offset="-10"> &lt;&lt; </a>&nbsp;
+                <a href="" class="page-change" data-offset="-1"> &lt; </a>&nbsp;
+                <span id="page_num"></span>&nbsp;
+                <a href="" class="page-change" data-offset="1"> &gt; </a>&nbsp;
+                <a href="" class="page-change" data-offset="10"> &gt;&gt; </a>&nbsp;
+                <a href="" class="page-change" data-offset="100"> &gt;&gt;&gt; </a>&nbsp;
+            </div>
 
 
-<div id="page">
-Loading ...
-</div><!-- page -->
+            <div id="wrapper2">
+                <div id="suras">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th>اسم</th>
+                                <th>صفحة</th>
+                                <th>عدد الآيات</th>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Loading ...</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div><!-- suras -->
 
-<div id="tafseer">
-Loading ...
-</div><!-- tafseer -->
-</div><!-- wrapper2 -->
+
+                <div id="page">
+                    Loading ...
+                </div><!-- page -->
+
+                <div id="tafseer">
+                    Loading ...
+                </div><!-- tafseer -->
+            </div><!-- wrapper2 -->
 
 
-</div><!-- wrapper -->
+        </div><!-- wrapper -->
 
 
-<script src="js/jquery-1.11.3.min.js"></script>
-<script src="js/jquery.hotkey.js"></script>
-<script src="js/quran.js"></script>
-</body>
+        <script src="js/jquery-1.11.3.min.js"></script>
+        <script src="js/jquery.hotkey.js"></script>
+        <script src="js/quran.js"></script>
+    </body>
+
 </html>
