Refactor: Code looks clear without these comments

--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
                             </tr>
                         </tbody>
                     </table>
-                </div><!-- suras -->
+                </div>
 
 
                 <div id="page">
                     Loading ...
-                </div><!-- page -->
+                </div>
 
                 <div id="tafseer">
                     Loading ...
-                </div><!-- tafseer -->
-            </div><!-- wrapper2 -->
+                </div>
+            </div>
 
 
-        </div><!-- wrapper -->
+        </div>
 
 
         <script src="js/jquery-1.11.3.min.js"></script>
