Enhance: Used entity number instead of entity name for better compatibility with other browsers

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <h1>القرآن الكريم</h1>
 
             <div id="control">
-                <a href="" class="page-change" data-offset="-100"> &lt;&lt;&lt; </a>&nbsp;
-                <a href="" class="page-change" data-offset="-10"> &lt;&lt; </a>&nbsp;
-                <a href="" class="page-change" data-offset="-1"> &lt; </a>&nbsp;
-                <span id="page_num"></span>&nbsp;
-                <a href="" class="page-change" data-offset="1"> &gt; </a>&nbsp;
-                <a href="" class="page-change" data-offset="10"> &gt;&gt; </a>&nbsp;
-                <a href="" class="page-change" data-offset="100"> &gt;&gt;&gt; </a>&nbsp;
+                <a href="" class="page-change" data-offset="-100"> &#60;&#60;&#60; </a>&#160;
+                <a href="" class="page-change" data-offset="-10"> &#60;&#60; </a>&#160;
+                <a href="" class="page-change" data-offset="-1"> &#60; </a>&#160;
+                <span id="page_num"></span>&#160;
+                <a href="" class="page-change" data-offset="1"> &#62; </a>&#160;
+                <a href="" class="page-change" data-offset="10"> &#62;&#62; </a>&#160;
+                <a href="" class="page-change" data-offset="100"> &#62;&#62;&#62; </a>&#160;
             </div>
 
 
