Refactor: Simplify the main layout without the need of using absolute position

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
 
 
-            <div id="wrapper2">
+            <div id="main">
                 <div id="suras">
                     <table>
                         <thead>
