--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div id="main">
                 <div id="suras">
-                    <table>
+                    <table class="suras__table">
                         <thead>
                             <tr>
                                 <th>#</th>
