Fix(Semantic): Used appropriate semantic html button instead of a link for changing page

--- a/index.html
+++ b/index.html
@@ -14,13 +14,25 @@
             <h1>القرآن الكريم</h1>
 
             <div id="control">
-                <a href="" class="page-change" data-offset="-100"> &#60;&#60;&#60; </a>&#160;
-                <a href="" class="page-change" data-offset="-10"> &#60;&#60; </a>&#160;
-                <a href="" class="page-change" data-offset="-1"> &#60; </a>&#160;
+                <button data-offset="-100" aria-label="Go back by hundred pages" class="control__button">
+                    &#60;&#60;&#60;
+                </button>&#160;
+                <button data-offset="-10" aria-label="Go back by ten pages" class="control__button">
+                    &#60;&#60;
+                </button>&#160;
+                <button data-offset="-1" aria-label="Go back by one page" class="control__button">
+                    &#62;
+                </button>&#160;
                 <span id="page_num"></span>&#160;
-                <a href="" class="page-change" data-offset="1"> &#62; </a>&#160;
-                <a href="" class="page-change" data-offset="10"> &#62;&#62; </a>&#160;
-                <a href="" class="page-change" data-offset="100"> &#62;&#62;&#62; </a>&#160;
+                <button data-offset="1" aria-label="Go forward by one page" class="control__button">
+                    &#62;
+                </button>&#160;
+                <button data-offset="10" aria-label="Go forward by ten pages" class="control__button">
+                    &#62;&#62;
+                </button>&#160;
+                <button data-offset="100" aria-label="Go forward by hundred pages" class="control__button">
+                    &#62;&#62;&#62;
+                </button>&#160;
             </div>
 
 
