Fix(Styling): Fix styling of page num with more padding to be aligned with inline buttons

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     &#60;&#60;
                 </button>&#160;
                 <button data-offset="-1" aria-label="Go back by one page" class="control__button">
-                    &#62;
+                    &#60;
                 </button>&#160;
-                <span id="page_num"></span>&#160;
+                <span class="control__page-num"></span>&#160;
                 <button data-offset="1" aria-label="Go forward by one page" class="control__button">
                     &#62;
                 </button>&#160;
