Refactor(Javascript): Rename functions to be easier to understand

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <script src="js/jquery-1.11.3.min.js"></script>
         <script src="js/jquery.hotkey.js"></script>
-        <script src="js/quran.js"></script>
+        <script src="js/mainScript.js"></script>
     </body>
 
 </html>
